--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,15 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='./public/stylesheets/style.css'/>
   </head>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <form action="/upload" method="post" enctype="multipart/form-data">
+	    <h2>单图上传</h2>
+	    <input type="file" name="logo">
+	    <input type="submit" value="提交">
+	</form>
   </body>
 </html>
