--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,5 +12,6 @@
 	    <input type="file" name="logo">
 	    <input type="submit" value="提交">
 	</form>
+	<a href="<%= fileUrl %>">文件管理器</a>
   </body>
 </html>
